# WifOR_Platform

./: .gitignore  pyproject.toml
src/eurostat/: import.py
src/geo_data/: __init__.py
src/geo_data/ref-nuts-2021/: NUTS_BN_01M_2021_3035_LEVL_1.geojson  NUTS_BN_01M_2021_3035_LEVL_2.geojson  NUTS_BN_01M_2021_3857_LEVL_1.geojson  NUTS_BN_01M_2021_3857_LEVL_2.geojson  NUTS_BN_01M_2021_4326_LEVL_1.geojson  NUTS_BN_01M_2021_4326_LEVL_2.geojson  NUTS_BN_01M_2021_4326_LEVL_3.geojson  NUTS_LB_2021_3035.geojson  NUTS_LB_2021_3035_LEVL_3.geojson  NUTS_LB_2021_3857.geojson  NUTS_LB_2021_3857_LEVL_3.geojson  NUTS_LB_2021_4326.geojson  NUTS_LB_2021_4326_LEVL_3.geojson
src/geo_data/retired/: access_regions.py  add_regions.py  class_handler2.py  class_handler3.py  code_backup.ipynb  code_backup.py  import_data.ipynb  regions2.ipynb
src/wifor_db/: WifOR_AM_DB.db  __init__.py  class_handler.ipynb  class_handler2.py  data_import.ipynb  data_import.py  env_loader.py  sql_handler.py  wifor_logger.py
src/wifor_db/tables/: lfsa_egai2d.json  lfsa_egaisedm.json  lfsa_egan.json  lfsa_egan2.json  lfsa_eisn2.json  lfsa_ugad.json  lfsa_ugpis.json  lfst_r_lfe2en2.json  regions.json
tests/: geo_data_test.ipynb
